zero-trust-deployment-blueprint/configs/iptables-zero-trust-rules.txt
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.1.0/24 -j ACCEPT
-A INPUT -s 192.168.2.0/24 -j ACCEPT
-A INPUT -s 192.168.1.10/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -s 192.168.2.0/24 -p tcp -m tcp --dport 3306 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -d 192.168.2.0/24 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.2.0/24 -d 192.168.1.0/24 -j REJECT --reject-with icmp-port-unreachable
